--- a/scb-engine/pom.xml
+++ b/scb-engine/pom.xml
@@ -12,7 +12,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <activatedProfiles>prod</activatedProfiles>
+        <activatedProfiles>dev</activatedProfiles>
     </properties>
 
     <dependencies>
@@ -141,6 +141,12 @@
                 <dependency>
                     <groupId>io.securecodebox.scanprocesses</groupId>
                     <artifactId>zap-process</artifactId>
+                    <version>0.0.1-SNAPSHOT</version>
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>io.securecodebox.scanprocesses</groupId>
+                    <artifactId>combined-nmap-nikto-scanprocess</artifactId>
                     <version>0.0.1-SNAPSHOT</version>
                     <scope>runtime</scope>
                 </dependency>
