--- a/scb-scanprocesses/pom.xml
+++ b/scb-scanprocesses/pom.xml
@@ -21,6 +21,7 @@
         <module>zap-process</module>
         <module>sslyze-process</module>
         <module>combined-nmap-nikto-scanprocess</module>
+        <module>combined-process</module>
     </modules>
 
     <dependencyManagement>
