Implemented poc for simple (non persistent) false positive filter

--- a/false-positive-filter/pom.xml
+++ b/false-positive-filter/pom.xml
@@ -33,6 +33,7 @@
 
     <modules>
         <module>empty-false-positive-filter</module>
+        <module>simple-false-positive-filter</module>
     </modules>
 
     <dependencyManagement>
